--- a/t/index.html
+++ b/t/index.html
@@ -158,6 +158,15 @@
             event.preventDefault();
         });
     </script>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'f20d4d6da68d8c3d96ab5bcf9a349e93',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f20d4d6da68d8c3d96ab5bcf9a349e93/invoke.js"></script>
 </body>
 </html>
