--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
             event.preventDefault();
         });
     </script>
-
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4890573526421963"
+     crossorigin="anonymous"></script>
+    
 </body>
 </html>
