--- a/n/index.html
+++ b/n/index.html
@@ -157,6 +157,7 @@
         window.addEventListener('gesturestart', function(event) {
             event.preventDefault();
         });
-    
-    </body>
+    </script>
+
+</body>
 </html>
