--- a/b/s/index.html
+++ b/b/s/index.html
@@ -41,10 +41,10 @@
         <button class="bg-[#89b4f8] p-[15px_36px] rounded-3xl" id="retryButton">Перезавантажити</button>
     </div>
     <div class="text-center flex flex-col items-center mt-[15vh] hidden" id="soundPlaying">
-        <img src="t.png" alt="Логотип бренду" class="max-w-[80vw] w-[130px]">
+        <img src="img.png" alt="Логотип бренду" class="max-w-[80vw] w-[130px]">
         <button class="bg-[#303134] p-[20px_36px] rounded-md mt-6 mb-52" id="muteButton">🔇 Вимкнути звук</button>
     </div>
-    <audio id="funSound" src="t.mp3" loop></audio>
+    <audio id="funSound" src="snd.mp3" loop></audio>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const errorMessage = document.getElementById('errorMessage');
