--- a/us/000.html
+++ b/us/000.html
@@ -48,5 +48,16 @@
 
 </head>
 <body>
+    <pre id="debug"></pre>
+<script>
+  fetch('users.txt?' + new Date().getTime()) 
+    .then(response => response.text())
+    .then(text => {
+      document.getElementById('debug').textContent = "Завантажено users.txt:\n" + text;
+    })
+    .catch(error => {
+      document.getElementById('debug').textContent = "Помилка завантаження: " + error;
+    });
+</script>
 </body>
 </html>
