--- a/t/index.html
+++ b/t/index.html
@@ -91,8 +91,8 @@
 
     <!-- Контейнер для лінків -->
     <div class="links-container">
-        <a href="https://t.me/mem_soundtag" target="_blank">Telegram</a>
-        <a href="https://tiktok.com/@mem.tag" target="_blank">TikTok</a>
+        <a href="https://t.me/d9an0nov" target="_blank">Телега</a>
+        <a href="https://tiktok.com/@nuitwoltplay2" target="_blank">Тикиток</a>
     </div>
 
     <script>
